<!--
  ~ Copyright (c) 2021-2022. Group 43 CMPUT301 F2021
  ~ All rights reserved.
  -->

<resources>
    <string name="app_name">GroupProject</string>
    <string name="etHabitTitleHint">Title</string>
    <string name="etHabitReasonHint">Reason</string>
    <string name="btnBackContentDescription">Back Button</string>
    <string name="btnConfirmAddHabitContentDescription">Confirm Add Habit</string>
    <string name="btnEditHabitContentDescription">Edit Habit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tvHabitEventTitle">Habit Event Title</string>
    <string name="tvHabitEventComment">Optional Comment</string>
    <string name="tvHabitEventLocation">Optional Location</string>
    <string name="tvHabitTitleText">Habit Title</string>
    <string name="tvHabitReasonText">Habit Reason</string>
    <string name="tvDateToStartText">Date To Start</string>
    <string name="tvHabitActiveDaysText">Active Days of Week</string>
    <string name="_tvHabitIsPublicText">Visibility</string>
    <string name="tvHabitIsPublic">Public</string>
    <string name="chipMonday">Monday</string>
    <string name="chipTuesday">Tuesday</string>
    <string name="chipWednesday">Wednesday</string>
    <string name="chipThursday">Thursday</string>
    <string name="chipFriday">Friday</string>
    <string name="chipSaturday">Saturday</string>
    <string name="chipSunday">Sunday</string>
    <string name="isPublicOn">Public</string>
    <string name="isPublicOff">Private</string>
    <string name="confirm_edit_habit">Confirm Edit Habit</string>
    <string name="back_button">Back Button</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="reason">Reason</string>
    <string name="name">Name</string>
    <string name="days">Days</string>
    <string name="username">Username</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="select_image">Select Image</string>
    <string name="event_title">Event Title</string>
    <string name="day">Day</string>
    <string name="dash">-</string>
    <string name="month">Month</string>
    <string name="date_to_start">Date To Start</string>
    <string name="select_new_image">Select New Image</string>
    <string name="event_title">Event Title</string>
    <string name="year">Year</string>
    <string name="date_to_start">Date To Start</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="password">password</string>
    <string name="passwordUpper">Password</string>
    <string name="jane_doe_example_com">jane.doe@example.com</string>
    <string name="email">Email</string>
    <string name="add_event">Add Event</string>
    <string name="first_name_space">First Name</string>
    <string name="last_name_space">Last Name</string>
    <string name="username">Username</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm">Confirm</string>

</resources>