<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021-2022. Group 43 CMPUT301 F2021
  ~ All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHabitActivity">

    <ImageButton
        android:id="@+id/btnViewEventBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/btnBackContentDescription"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:scaleX="1.5"
        android:scaleY="1.5"/>

    <ImageButton
        android:id="@+id/btnConfirmAddHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@color/white"
        android:contentDescription="@string/btnConfirmAddHabitContentDescription"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/svAddHabit"
        app:layout_constraintTop_toBottomOf="@id/btnViewEventBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="65dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llAddHabit"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:id="@+id/etHabitTitle"
                android:hint="@string/etHabitTitleHint"
                app:layout_constraintBottom_toTopOf="@+id/etHabitReason"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                android:maxLength="20" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                app:layout_constraintTop_toBottomOf="@+id/etHabitTitle"
                android:id="@+id/etHabitReason"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                android:hint="@string/etHabitReasonHint"
                android:maxLength="30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_to_start"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/llDateToStart"
                android:orientation="horizontal"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:minWidth="65dp"
                    android:id="@+id/etDateToStartYear"
                    android:hint="Year"
                    app:layout_constraintBottom_toTopOf="@+id/etHabitReason"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toLeftOf="parent"
                    android:maxLength="4"
                    android:inputType="number"
                    android:editable="false"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dash"
                    android:layout_marginVertical="20dp"
                    android:textSize="30sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:id="@+id/etDateToStartMonth"
                    android:hint="@string/month"
                    app:layout_constraintBottom_toTopOf="@+id/etHabitReason"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toLeftOf="parent"
                    android:maxLength="2"
                    android:inputType="number"
                    android:editable="false"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dash"
                    android:layout_marginVertical="20dp"
                    android:textSize="30sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:id="@+id/etDateToStartDay"
                    android:hint="@string/day"
                    app:layout_constraintBottom_toTopOf="@+id/etHabitReason"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toLeftOf="parent"
                    android:maxLength="2"
                    android:inputType="number"
                    android:editable="false"
                    />
            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgDaysOfWeek"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llDateToStart">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cMonday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/chipMonday"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chipgroup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cTuesday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/chipTuesday"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chipgroup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cWednesday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/chipWednesday"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chipgroup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cThursday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/chipThursday"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chipgroup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cTFriday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/chipFriday"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chipgroup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cSaturday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/chipSaturday"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chipgroup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cSunday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/chipSunday"
                    android:textColor="@color/black"
                    app:chipBackgroundColor="@color/chipgroup" />

            </com.google.android.material.chip.ChipGroup>

            <ToggleButton
                android:id="@+id/toggleIsPublic"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/isPublicOn"
                android:textOff="@string/isPublicOff"
                android:checked="true"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>