<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021-2022. Group 43 CMPUT301 F2021
  ~ All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewHabitActivity">


    <Button
        android:id="@+id/go_events1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go to EventS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/btnBackContentDescription"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:scaleX="1.5"
        android:scaleY="1.5"/>

    <ImageButton
        android:id="@+id/btnEditHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@color/white"
        android:contentDescription="@string/btnEditHabitContentDescription"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/svAddHabit"
        android:layout_width="297dp"
        android:layout_height="525dp"
        android:layout_marginTop="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/llAddHabit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/_tvHabitTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:text="@string/tvHabitTitleText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHabitTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/tvHabitTitleText"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/_tvHabitReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:text="@string/tvHabitReasonText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHabitReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/tvHabitReasonText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/_tvHabitDateToStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:text="@string/tvDateToStartText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHabitDateToStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/tvDateToStartText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/_tvHabitActiveDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:text="@string/tvHabitActiveDaysText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHabitActiveDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/days"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/_tvHabitIsPublic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:text="@string/_tvHabitIsPublicText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHabitIsPublic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/tvHabitIsPublic"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>